Build JAVA 17 docker images.